<resources>
    <string name="app_name">NotesApp</string>
    <string name="action_settings">Settings</string>

    <string name="action_add">Add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_text">Idea</string>
    <string name="important_text">Important</string>
    <string name="task_text">Task</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="note_detail_title">Title</string>
    <string name="note_detail_description">Description</string>
    <string name="note_detail_idea">Idea</string>
    <string name="note_detail_task">Task</string>
    <string name="note_detail_important">Important</string>
    <string name="note_detail_ok">OK</string>

    <string name="settings_title">Settings</string>
    <string name="theme_title">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
</resources>
