<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleEditField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/title_hint" />

        <EditText
            android:id="@+id/descriptionEditField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/description_hint" />

        <CheckBox
            android:id="@+id/ideaCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idea_text" />

        <CheckBox
            android:id="@+id/importantCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/important_text" />

        <CheckBox
            android:id="@+id/taskCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok_button" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>